--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,17 +9,16 @@ services:
     - HOSTNAME=http://host.docker.internal:4001
     - ENV=local
     - REGION=us-west-2
-#    - ELASTICACHE_ENDPOINT=memcached:11211
+    - ELASTICACHE_ENDPOINT=memcached:11211
     volumes:
     - .:/app
-    # forward the docker app's router port to the standard router port
     ports:
-    - 8080:8080
+    - "8080:8080"
   local-dynamodb:
     image: amazon/dynamodb-local:latest
     command: -jar DynamoDBLocal.jar -inMemory -sharedDb
     ports:
-    - 8090:8000
+    - "8090:8000"
     restart: always
   local-dynamodb-init:
     depends_on:
@@ -37,7 +36,7 @@ services:
               AttributeName=itemID,KeyType=HASH
           --billing-mode PAY_PER_REQUEST
           --endpoint-url http://local-dynamodb:8000 --region us-west-2
-#  memcached:
-#    image: bitnami/memcached:latest
-#    ports:
-#    - 11211:11211
+  memcached:
+    image: bitnami/memcached:latest
+    ports:
+    - "11211:11211"
